--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
    
 
     <div class="collaboration-box2">
-        <h3>Proposal Quote:<br /><br />
+        <h3><b></b>Proposal Quote:</b><br /><br />
             <ul style="text-align: left;">
                 <li>$300 for scope of work</li>
                 <li>Includes one month of ongoing monitoring, maintenance, and updates.</li>
