--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         </h3>
 
-         <h3>Detailed Work<br /><br />
+         <h3>Detailed Work:<br /><br />
             <ol style="text-align: left;">
                 <li>Forms test *currently set to sales@chewys.com (contact)</li>
                 <li>Address update/hours update (contact)</li>
