--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
         <h3>Job Scope:<br /><br />
             <ul style="text-align: left;">
                 <li>Staging site build/update/backup</li>
-                <li>Test all link and forms</li>
+                <li>Test all links and forms</li>
                 <li>Lite update UX/UI</li>
                 <li>Customer sequence purchase testing</li>
-                <li>Connect payment option)</li>
+                <li>Connect payment option (quickbooks)</li>
                 <li>Push live and test</li>
                 <li>Take change request not outside of current web structure</li>
             </ul>
@@ -110,6 +110,8 @@
                 <li>WordPress Login</li>
                 <li>Product updates/changes</li>
                 <li>FAQ Update?</li>
+                <li>Tax matrix</li>
+                <li>Shipping limitations</li>
             </ul>
 
         </h3>
